--- a/src/app/app.fxml
+++ b/src/app/app.fxml
@@ -5,6 +5,6 @@
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller">
    <children>
-      <Button fx:id="my_button" mnemonicParsing="false" onAction="#test_method" prefHeight="125.0" prefWidth="209.0" text="Tlačítko" />
+      <Button fx:id="my_button" mnemonicParsing="false" onAction="#test_method" prefHeight="125.0" prefWidth="209.0" text="GUI" />
    </children>
 </StackPane>
