--- a/src/app/app.fxml
+++ b/src/app/app.fxml
@@ -3,6 +3,7 @@
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -13,6 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.web.WebView?>
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#layout_key_press" prefHeight="958.0" prefWidth="812.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller">
@@ -21,12 +23,6 @@
          <top>
             <Pane prefHeight="58.0" prefWidth="812.0" style="-fx-background-color: #556272;" BorderPane.alignment="CENTER" />
          </top>
-         <left>
-            <Pane prefHeight="432.0" prefWidth="200.0" style="-fx-background-color: #FFFFFF;" BorderPane.alignment="CENTER" />
-         </left>
-         <right>
-            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFFFFF;" BorderPane.alignment="CENTER" />
-         </right>
          <bottom>
             <VBox prefHeight="393.0" prefWidth="812.0" BorderPane.alignment="CENTER">
                <children>
@@ -103,11 +99,43 @@
             </VBox>
          </bottom>
          <center>
-            <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0">
+            <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white;">
                <children>
                   <WebView fx:id="visualisation" prefHeight="200.0" prefWidth="200.0" />
                </children></VBox>
          </center>
+         <left>
+            <VBox prefWidth="300.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+               <children>
+                  <HBox alignment="CENTER" minHeight="60.0" prefHeight="80.0" prefWidth="300.0" style="-fx-background-color: #81BEFD;">
+                     <children>
+                        <Label style="-fx-text-fill: #556272; -fx-font-weight: bold;" text="Proměnné">
+                           <font>
+                              <Font size="28.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <ListView fx:id="symbolTableFunctions" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefWidth="300.0" style="-fx-border-color: white; -fx-font-size: 14pt;" />
+               </children>
+            </VBox>
+         </left>
+         <right>
+            <VBox prefHeight="200.0" prefWidth="300.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+               <children>
+                  <HBox alignment="CENTER" minHeight="60.0" prefHeight="80.0" prefWidth="200.0" style="-fx-background-color: #81BEFD;">
+                     <children>
+                        <Label style="-fx-font-weight: bold; -fx-text-fill: #556272;" text="Funkce">
+                           <font>
+                              <Font size="28.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <ListView fx:id="functionSymbolTable" maxWidth="1.7976931348623157E308" prefWidth="300.0" style="-fx-border-color: white; -fx-font-size: 18pt;" />
+               </children>
+            </VBox>
+         </right>
       </BorderPane>
    </children>
 </StackPane>
