--- a/src/app/app.fxml
+++ b/src/app/app.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.web.WebView?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#layout_key_press" prefHeight="958.0" prefWidth="812.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#layout_key_press" prefHeight="958.0" prefWidth="1125.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0">
          <top>
@@ -28,7 +28,7 @@
                <children>
                   <AnchorPane prefHeight="81.0" prefWidth="806.0" style="-fx-background-color: #556272;">
                      <children>
-                        <TextField fx:id="test_action" layoutX="56.0" layoutY="25.0" onAction="#send_action" onMouseClicked="#field_click" prefHeight="75.0" prefWidth="587.0" style="-fx-font-size: 32 pt; -fx-font-weight: bold; -fx-background-color: #556272; -fx-text-fill: white;" text="|" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="56.0" AnchorPane.rightAnchor="169.0" AnchorPane.topAnchor="0.0" />
+                        <TextField fx:id="test_action" focusTraversable="false" layoutX="56.0" layoutY="25.0" onAction="#send_action" onMouseClicked="#field_click" prefHeight="75.0" prefWidth="587.0" style="-fx-font-size: 32 pt; -fx-font-weight: bold; -fx-background-color: #556272; -fx-text-fill: white;" text="|" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="56.0" AnchorPane.rightAnchor="169.0" AnchorPane.topAnchor="0.0" />
                         <Label alignment="CENTER" layoutX="679.0" layoutY="30.0" onMouseClicked="#send_action_button" prefHeight="75.0" prefWidth="135.0" styleClass="equal_button" stylesheets="@style.css" text="=" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                         <Label alignment="CENTER" layoutX="686.0" layoutY="30.0" onMouseClicked="#backspace_click" prefHeight="75.0" prefWidth="69.0" styleClass="equal_button" stylesheets="@style.css" text="&lt;X|" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="135.0" AnchorPane.topAnchor="0.0" />
                         <Label alignment="CENTER" onMouseClicked="#send_action_button" prefHeight="75.0" prefWidth="44.0" styleClass="equal_button" stylesheets="@style.css" text="&gt;" />
@@ -43,6 +43,8 @@
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="93.0" minWidth="10.0" prefWidth="29.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="10.0" prefWidth="80.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="171.0" minWidth="10.0" prefWidth="29.0" />
                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="171.0" minWidth="10.0" prefWidth="171.0" />
                           </columnConstraints>
                           <rowConstraints>
@@ -68,30 +70,34 @@
                               <Button mnemonicParsing="false" onAction="#button_action" styleClass="keyboard_button" stylesheets="@style.css" text="*" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                               <Button mnemonicParsing="false" onAction="#button_action" styleClass="keyboard_button" stylesheets="@style.css" text="-" GridPane.columnIndex="3" GridPane.rowIndex="2" />
                               <Button mnemonicParsing="false" onAction="#button_action" styleClass="keyboard_button" stylesheets="@style.css" text="+" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                              <Button mnemonicParsing="false" onAction="#button_action" stylesheets="@style.css" text="sin" GridPane.columnIndex="5">
+                              <Button mnemonicParsing="false" onAction="#button_action" stylesheets="@style.css" text="sin" GridPane.columnIndex="7">
                                  <styleClass>
                                     <String fx:value="keyboard_button" />
                                     <String fx:value="keyboard_button_goniometry" />
                                  </styleClass>
                               </Button>
-                              <Button mnemonicParsing="false" onAction="#button_action" stylesheets="@style.css" text="cos" GridPane.columnIndex="5" GridPane.rowIndex="1">
+                              <Button mnemonicParsing="false" onAction="#button_action" stylesheets="@style.css" text="cos" GridPane.columnIndex="7" GridPane.rowIndex="1">
                                  <styleClass>
                                     <String fx:value="keyboard_button" />
                                     <String fx:value="keyboard_button_goniometry" />
                                  </styleClass>
                               </Button>
-                              <Button mnemonicParsing="false" onAction="#button_action" stylesheets="@style.css" text="tan" GridPane.columnIndex="5" GridPane.rowIndex="2">
+                              <Button mnemonicParsing="false" onAction="#button_action" stylesheets="@style.css" text="tan" GridPane.columnIndex="7" GridPane.rowIndex="2">
                                  <styleClass>
                                     <String fx:value="keyboard_button" />
                                     <String fx:value="keyboard_button_goniometry" />
                                  </styleClass>
                               </Button>
-                              <Button mnemonicParsing="false" onAction="#button_action" stylesheets="@style.css" text="cotg" GridPane.columnIndex="5" GridPane.rowIndex="3">
+                              <Button mnemonicParsing="false" onAction="#button_action" stylesheets="@style.css" text="cotg" GridPane.columnIndex="7" GridPane.rowIndex="3">
                                  <styleClass>
                                     <String fx:value="keyboard_button" />
                                     <String fx:value="keyboard_button_goniometry" />
                                  </styleClass>
                               </Button>
+                              <Button mnemonicParsing="false" onAction="#button_action" styleClass="keyboard_button" stylesheets="@style.css" text="!" GridPane.columnIndex="5" />
+                              <Button mnemonicParsing="false" onAction="#button_action" prefHeight="62.0" prefWidth="77.0" styleClass="keyboard_button" stylesheets="@style.css" text="," GridPane.columnIndex="5" GridPane.rowIndex="1" />
+                              <Button mnemonicParsing="false" onAction="#button_action" styleClass="keyboard_button" stylesheets="@style.css" text="=" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+                              <Button mnemonicParsing="false" onAction="#button_action" prefHeight="62.0" prefWidth="77.0" style="-fx-font-size: 22pt;" styleClass="keyboard_button" stylesheets="@style.css" text="\%" GridPane.columnIndex="5" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
                      </children>
