--- a/src/app/app.fxml
+++ b/src/app/app.fxml
@@ -2,6 +2,7 @@
 
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
@@ -17,11 +18,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.web.WebView?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#layout_key_press" prefHeight="958.0" prefWidth="1125.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#layout_key_press" prefHeight="958.0" prefWidth="1125.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0">
          <top>
-            <Pane prefHeight="58.0" prefWidth="812.0" style="-fx-background-color: #556272;" BorderPane.alignment="CENTER" />
+            <Pane prefHeight="58.0" prefWidth="812.0" style="-fx-background-color: #556272;" BorderPane.alignment="CENTER">
+               <children>
+                  <CheckBox layoutX="443.0" layoutY="16.0" mnemonicParsing="false" onAction="#changeExpandVarsAction" text="Expandovat proměnné" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </CheckBox>
+               </children></Pane>
          </top>
          <bottom>
             <VBox prefHeight="393.0" prefWidth="812.0" BorderPane.alignment="CENTER">
@@ -123,7 +131,7 @@
                         </Label>
                      </children>
                   </HBox>
-                  <ListView fx:id="symbolTableFunctions" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefWidth="300.0" style="-fx-border-color: white; -fx-font-size: 14pt;" />
+                  <ListView fx:id="symbolVariableListView" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefWidth="300.0" style="-fx-border-color: white; -fx-font-size: 14pt;" />
                </children>
             </VBox>
          </left>
@@ -139,7 +147,7 @@
                         </Label>
                      </children>
                   </HBox>
-                  <ListView fx:id="functionSymbolTable" maxWidth="1.7976931348623157E308" prefWidth="300.0" style="-fx-border-color: white; -fx-font-size: 18pt;" />
+                  <ListView fx:id="symbolFunctionsListView" maxWidth="1.7976931348623157E308" prefWidth="300.0" style="-fx-border-color: white; -fx-font-size: 18pt;" />
                </children>
             </VBox>
          </right>
