--- a/src/app/fxml_templates/setting.fxml
+++ b/src/app/fxml_templates/setting.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="460.0" prefWidth="546.0" styleClass="dialog_panel" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Setting">
+<AnchorPane prefHeight="460.0" prefWidth="546.0" styleClass="dialog_panel" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controllers.Setting">
    <children>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="546.0" AnchorPane.bottomAnchor="76.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
