Installation description in manual

--- a/src/app/html_templates/manual.html
+++ b/src/app/html_templates/manual.html
@@ -27,7 +27,20 @@
             <h1>Uživatelká příručka</h1>
 
             <h2 id="odkaz1">Instalace software</h2>
-
+			
+			<p><strong>Windows</strong></p>
+				<ul>
+					<li>Spusťte instalátor <em>advanced-scientific-calculator-x.x-setup.exe</em></li>
+					<li>pokračujte podle instrukcí instalátoru.</li>
+					<li>Odinstalátor najdete ve stejném adresáři jako spustitelný soubor asc.exe.</li>
+				</ul>
+			
+			<p><strong>Linux</strong></p>
+				<ul>
+					<li>Spusťte skript <em>install.sh</em></li>
+					<li>Pro odinstalaci spusťte skript <em>uninstall.sh</em></li>
+				</ul>
+			
             <h2 id="odkaz2">Uživatelské rozhraní</h2>
 
             <p>
