Edit gui description

--- a/src/app/html_templates/manual.html
+++ b/src/app/html_templates/manual.html
@@ -1,7 +1,7 @@
 <html lang="cs-cz">
 
     <head>
-        <meta name="author" content="Honza Havlin" />
+        <meta name="author" content="Jan Havlin" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="manual.css" />
         <meta charset="UTF-8" />
@@ -55,7 +55,9 @@
                 <li>Výstup</li>
                 <li>Seznam definovaných proměnných</li>
                 <li>Seznam definovaných funkcí</li>
-                <li>Nastavení, zdali se u proměnných zobrazí jejich název, nebo hodnota</li>
+                <li>Nastavení</li>
+				<li>Uživatelská příručka</li>
+				<li>Informace o aplikaci</li>
             </ol>
 
             <h2 id="odkaz3">Základní operace</h2>
